updated salary pay frequency tp fix overflow issue

--- a/src/production-css/salarypayfrequency.production.css
+++ b/src/production-css/salarypayfrequency.production.css
@@ -553,7 +553,7 @@ img {
 
 @media (max-width: 480px) {
   body {
-    height: 770px;
+    height: 580px;
   }
 
   html {
@@ -562,7 +562,7 @@ img {
   }
 
   .section-div {
-    height: 745px;
+    height: 570px;
   }
 
   .logo {
